# heroes-patterns

./: .clang-format  .gitignore  CMakeLists.txt  FantasyTheme.txt  README.md  colors.py  components.py  conanfile.py  ecs.py  hexmath.py  main.py  pathfinding.py  systems.py  ui_research.py  utils.py
assets/knight/: Vapinskaya_new.docx
commands/: __init__.py  attack.py  move.py  queued_attack.py
components/: __init__.py  active_turn.py  ai_managable.py  animation.py  attack.py  available_cell.py  blocking_move.py  clickable.py  endgame_ui.py  game_over.py  health.py  hex_position.py  hovered.py  initiative.py  path.py  renderable.py  team.py  unit_state.py
scripts/: video_scripts.sh
src/: fight_field_grid.h  main.cpp
src/models/: fight_field.h  knight.h  unit.h  unit_context.h  unit_state.h
src/views/: knight_view.h
systems/: __init__.py  ai_manager.py  animation.py  attack_system.py  command_system.py  endgame_system.py  movement_system.py  turn_manager.py
